# discrete-analysis

./: .gitignore  README.md
kp/: CMakeLists.txt  benchmark.cpp  main.cpp
kp/include/: classifier.h  word_tools.h
kp/report/: report.aux
kp/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
kp/src/: classifier.cpp  word_tools.cpp
kp/tests/: metrics.cpp
kp/tests/files/: big_test.txt  slight_test.txt  small_test.txt
lab01/: Makefile  benchmark.cpp  generator.py  main.cpp  pair.cpp  pair.h  sort.cpp  sort.h  vector.h  wrapper.sh
lab01/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab02/: CMakeLists.txt  benchmark.sh  main.cpp  test_generator.py
lab02/include/: patricia.h  vector.h
lab02/report/src/: benchmark.tex  src.tex  thinks.tex  titlepage.tex
lab02/src/: binary_string.cpp  patricia.cpp
lab02/tests/e2e/: 01.txt  cf.txt
lab02/tests/unit/: binary_string_test.cpp  patricia_test.cpp
lab03/report/src/: literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab04/: CMakeLists.txt  benchmark.cpp  main.cpp  test_generator.py
lab04/include/: kmp.h  parser.h
lab04/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab04/src/: kmp.cpp  parser.cpp
lab04/tests/unit/: kmp_test.cpp
lab05/: CMakeLists.txt  benchmark.cpp  main.cpp  test_generator.cpp
lab05/report/: report.aux
lab05/report/src/: benchmark.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab07/: CMakeLists.txt  benchmark.cpp  main.cpp
lab07/report/: report.aux
lab07/report/src/: benchmark.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab08/: CMakeLists.txt  benchmark.cpp  main.cpp
lab08/report/src/: src.tex  thinks.tex
lab09/: CMakeLists.txt  benchmark.cpp  main.cpp  test_generator.cpp
lab09/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
